--- a/core-samples/jsapi-custom-ui/package.json
+++ b/core-samples/jsapi-custom-ui/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "test"
   },
   "dependencies": {
     "@arcgis/core": "~4.32.0",
